--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
     "sharp": "^0.28.3",
+    "sscjs": "0.0.8",
     "util": "^0.12.4"
   }
 }
